TAG: gxdimageload-6-0-2-4
DATE: 02/16/2016
STAFF: sc
CHANGES: TR12026 - LacZ Images
impclacz.config - removed config that is already in main config
impclaczPrepFullSize.csh - added calls to load caption and copyright notes

TAG: gxdimageload-6-0-2-3
TAG: gxdimageload-6-0-2-2
TAG: gxdimageload-6-0-2-1
DATE: 02/14/2016
STAFF: sc
CHANGES: TR12026 - LacZ Images
1) gxdimageload.py - converted to postgres
2) pixload.sh - uncommented pertinent code
3) Added:
a) impclacz.config
b) impclaczPrepFullSize.csh
c) impclaczPrepFullSize.py
d) impclaczpixload.csh

TAG: gxdimageload-5-1-7-5
TAG: gxdimageload-5-1-7-4
TAG: gxdimageload-5-1-7-3
TAG: gxdimageload-5-1-7-2
TAG: gxdimageload-5-1-7-1
DATE: 01/30/2014
STAFF: lec
CHANGES: 
1) TR11471/GUDMAP2/images

TAG: gxdimageload-5-1-5-1
STAFF: lec
CHANGES: 
1) TR11350/remove thumbnail stuff

TAG: gxdimageload-5-0-0-3
TAG: gxdimageload-5-0-0-2
TAG: gxdimageload-5-0-0-1
DATE: 04/05/2012, 04/25/2012
STAFF: lec
CHANGES: 
1) TR10976/tr10976pixload.sh

TAG: gxdimageload-4-4-2-3
DATE: 02/13/2012
STAFF: lec
CHANGES: 
1) TR10978/added x,y,width,height to IMG_ImagePane

TAG: gxdimageload-4-4-2-2
DATE: 11/22/2011
STAFF: lec
CHANGES: 
1) added -f to *csh

TAG: gxdimageload-4-4-2-1
DATE: 10/11/2011
STAFF: lec
CHANGES: 
1) tr10872*

TAG: gxdimageload-4-4-1-9
TAG: gxdimageload-4-4-1-8
TAG: gxdimageload-4-4-1-7
TAG: gxdimageload-4-4-1-6
TAG: gxdimageload-4-4-1-5
TAG: gxdimageload-4-4-1-4
DATE: 07/06/2011
STAFF: lec
CHANGES: 
1) tr10629imageAssoc.py: check creation_date on query that gets the images
   to exclude the original set of images that were loaded

TAG: gxdimageload-4-4-1-3
DATE: 03/29/2011
STAFF: dbm
CHANGES: 
1) tr10537imageAssoc.py: check creation_date on query that gets the images
   to exclude the original set of images that were loaded

TAG: gxdimageload-4-4-1-2
DATE: 02/22/2011
STAFF: dbm
CHANGES: 
1) gxdimageload.py: changed image class key to 83
2) Added tr10537pixload.sh, tr10537prepFullsize.py, tr10537prepThumbnail.py