@@ -1,3 +1,11 @@
+TAG: gxdimageload-6-0-4-?
+DATE: 04/26/2016
+STAFF: lec
+CHANGES: 
+TR12026/lacz
+1) convert to Git
+2) assocResultImage.py/convert to postgres
+
 TAG: gxdimageload-6-0-2-4
 DATE: 02/16/2016
 STAFF: sc
